--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,30 +1,25 @@
-%legend Register Account
+%h2
+  %strong Sign Up
+
+%p.small
+  Or
+  = link_to 'sign in to your account', login_path
 
 = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-    = devise_error_messages!
-    
-    .form-group
-        = f.label :email
-        %br
-        = f.email_field :email, class: 'form-control'
-        
-    .form-group
-        = f.label :password
-        -if @minimum_password_length
-            %em
-                (
-                =@minimum_password_length
-                characters minimum)
-        %br
-        = f.password_field :password, autocomplete: "off", class: 'form-control'
-        
-    .form-group
-        = f.label :password_confirmation
-        %br
-        = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
-        
-    .form-group
-        = f.submit "Register", class: 'form-control btn btn-success'
+  = devise_error_messages!
 
-    .text-center
-        %p= link_to 'Log In', login_path
+  .form-group
+    = f.email_field :email, placeholder: 'E-Mail', class: 'form-control'
+
+  .form-group
+    = f.password_field :password, autocomplete: 'off', placeholder: 'Password', class: 'form-control'
+    -if @minimum_password_length
+      %small.form-text.text-muted
+        =@minimum_password_length
+        characters minimum
+
+  .form-group
+    = f.password_field :password_confirmation, autocomplete: 'off', placeholder: 'Password Confirmation', class: 'form-control'
+
+  .form-group
+    = f.submit 'Sign Up', class: 'form-control btn btn-success'
