Fix record description display

--- a/app/views/records/today.html.haml
+++ b/app/views/records/today.html.haml
@@ -15,7 +15,7 @@
                 = record.hours
                 Hours
 
-            %p.mb-1= record.description
+            %p.mb-1= simple_format h record.description
 
     - else
       .jumbotron
