--- a/app/views/records/index.html.haml
+++ b/app/views/records/index.html.haml
@@ -18,7 +18,7 @@
               = record.hours
               Hours
 
-          %p.mb-1= record.description
+          %p.mb-1= simple_format h record.description
 
     / PAGINATION
     .text-center
