--- a/app/views/layouts/registrations.html.haml
+++ b/app/views/layouts/registrations.html.haml
@@ -3,14 +3,11 @@
 %html
 %head
   = render 'layouts/head'
-  = stylesheet_link_tag 'registrations'
+  /= stylesheet_link_tag 'registrations'
 
 %body
-  .container-fluid.h-100
-    .row.h-100
-      .col-md-8
-
-      .col-md-4.bg-white
-        .row.h-100.align-items-center
-          .col-md-10.mx-auto
-            = yield
+  .container
+    .row
+      .col.col-login.mx-auto
+        .my-6
+          = yield
