--- a/app/views/punchcards/new.html.haml
+++ b/app/views/punchcards/new.html.haml
@@ -1,5 +1,8 @@
-%h2 Create New Punchcard
+.card
+  .card-header
+    %h3.card-title Create New Punchcard
 
-%p.text-muted Create a new punchcard so that you can start logging your time for a particular activity.
+  .card-body
+    %p.text-muted Create a new punchcard so that you can start logging your time for a particular activity.
 
-= render 'form'
+    = render 'form'
