--- a/app/views/records/new.html.haml
+++ b/app/views/records/new.html.haml
@@ -1,3 +1,5 @@
-%h2 Punch New Record
-
-= render 'form'
+.card
+  .card-header
+    %h3.card-title Punch New Entry
+  .card-body
+    = render 'form'
