--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,41 +1,32 @@
-%h2
-  %i.material-icons.text-muted settings
-  Settings
-
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-
-  = devise_error_messages!
-
-  .form-group
-    = f.label :email
-    = f.email_field :email, autofocus: true, class: 'form-control'
-
-  .form-group
-    = f.input :time_zone
-
-  .form-group
-    = f.label :password
-    = f.password_field :password, autocomplete: 'off', class: 'form-control'
-    %small.form-text.text-muted Leave blank if you don't want to change it
-
-  .form-group
-    = f.label :password_confirmation
-    = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
-
-  .form-group
-    = f.label :current_password
-    = f.password_field :current_password, autocomplete: 'off', class: 'form-control'
-    %small.form-text.text-muted We need your current password to confirm your changes
-
-  .form-group
-    = f.submit 'Save Changes', class: 'btn btn-primary'
-
-%hr
-
-.card.border-danger
+.card
   .card-header
-    Danger Zone
+    %h3.card-title My Settings
+
   .card-body
-    %h4.card-title Cancel My Account
-    %p.card-text
-      Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger'}
+    = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+
+      = devise_error_messages!
+
+      .form-group
+        = f.label :email, class: 'form-label'
+        = f.email_field :email, autofocus: true, class: 'form-control'
+
+      .form-group
+        = f.input :time_zone
+
+      .form-group
+        = f.label :password, class: 'form-label'
+        = f.password_field :password, autocomplete: 'off', class: 'form-control'
+        %small.form-text.text-muted Leave blank if you don't want to change it
+
+      .form-group
+        = f.label :password_confirmation, class: 'form-label'
+        = f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control'
+
+      .form-group
+        = f.label :current_password, class: 'form-label'
+        = f.password_field :current_password, autocomplete: 'off', class: 'form-control'
+        %small.form-text.text-muted We need your current password to confirm your changes
+
+      .form-footer
+        = f.submit 'Save Changes', class: 'btn btn-primary'
