Fix heatmap control buttons

--- a/app/views/punchcards/_heatmap.html.haml
+++ b/app/views/punchcards/_heatmap.html.haml
@@ -3,9 +3,9 @@
     %h3.card-title Heatmap
 
     .card-options
-      %a.btn.btn-sm.btn-secondary{ href: '#', id: "cal-previous-#{@card.id}" }
+      #cal-previous.btn.btn-sm.btn-secondary
         %i.fe.fe-arrow-left
-      %a.btn.btn-sm.btn-secondary.ml-2{ href: '#', id: "cal-next-#{@card.id}" }
+      #cal-next.btn.btn-sm.btn-secondary.ml-2
         %i.fe.fe-arrow-right
 
   .card-body.mx-auto
