--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -20,6 +20,6 @@
 
             .dropdown-divider
 
-            = link_to logout_path, class: 'dropdown-item' do
+            = link_to logout_path, method: :delete, class: 'dropdown-item' do
               %i.dropdown-icon.fe.fe-log-out
               Sign Out
