Change number of entries icon in punchcard overview

--- a/app/views/punchcards/_overview.html.haml
+++ b/app/views/punchcards/_overview.html.haml
@@ -15,7 +15,7 @@
   .card.p-3
     .d-flex.align-items-center
       %span.stamp.stamp-md.bg-green.mr-3
-        %i.fe.fe-layers
+        %i.fe.fe-file-text
       %div
         %h4.m-0
           = @card.records.count
