--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,7 @@
   %body
     = render 'layouts/header'
     = render 'layouts/nav'
+    = render 'layouts/alerts'
 
     / CONTENT
     .my-3.my-md-5
