--- a/app/views/shared/_errors.html.haml
+++ b/app/views/shared/_errors.html.haml
@@ -1,7 +1,6 @@
 - if model.errors.any?
-    .alert.alert-danger
-        %h4
-            %strong Please fix the following errors:
-        %ul
-            - model.errors.full_messages.each do |message|
-                %li= message
+  .alert.alert-danger
+    %h4 Please fix the following errors:
+    %ul
+      - model.errors.full_messages.each do |message|
+        %li= message
