--- a/app/views/punchcards/show.html.haml
+++ b/app/views/punchcards/show.html.haml
@@ -24,8 +24,7 @@
     = render 'heatmap'
 
 .row.row-cards
-  .col-lg.6
+  .col-lg-6
     = render 'latest_entries'
   .col-lg-6
     = render 'goal_progress'
-    
