--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -12,6 +12,8 @@
             %span.avatar.avatar-cyan= current_user.initial
             %span.ml-2.d-none.d-lg-block
               %span.text-default= current_user.email
+              - if current_user.admin
+                %small.text-muted.d-block.mt-1 Administrator
 
           .dropdown-menu.dropdown-menu-right.dropdown-menu-arrow
             = link_to edit_user_registration_path, class: 'dropdown-item' do
