Improve user settings path

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,7 +16,7 @@
                 %small.text-muted.d-block.mt-1 Administrator
 
           .dropdown-menu.dropdown-menu-right.dropdown-menu-arrow
-            = link_to edit_user_registration_path, class: 'dropdown-item' do
+            = link_to settings_path, class: 'dropdown-item' do
               %i.dropdown-icon.fe.fe-settings
               Settings
 
