--- a/app/views/records/today.html.haml
+++ b/app/views/records/today.html.haml
@@ -15,7 +15,7 @@
                 %th.text-center
                 %th Punchcard
                 %th Date
-                %th Decription
+                %th Description
                 %th.text-center Hours
                 %th
             %tbody
