--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -5,16 +5,10 @@
     %title Hourglass - Pricing
 
     = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_link_tag 'landing'
+    = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Quicksand:400,500,700', rel: 'stylesheet'
+
     = javascript_include_tag 'application'
 
   %body
-    .page
-      .page-main
-        = render 'layouts/header'
-
-        / CONTENT
-        .my-3.my-md-5
-          .container
-            = yield
-
-        = render 'layouts/footer'
+    = yield
